goapp-k8s.yml

---

apiVersion: extensions/v1beta1

kind: Deployment

metadata:

  name: goapp-deploy

  namespace: kube-apps

  labels:

    k8s-app: goappk8s

spec:

  replicas: 2

  revisionHistoryLimit: 10

  minReadySeconds: 5

  strategy:

    type: RollingUpdate

    rollingUpdate:

      maxSurge: 1

      maxUnavailable: 1

  template:

    metadata:

      labels:

        k8s-app: goappk8s

    spec:

      containers:

      - image: pengj/goappk8s:v1.0.0

        imagePullPolicy: Always

        name: goappk8s

        ports:

        - containerPort: 8080

          protocol: TCP

        resources:

          limits:

            cpu: 100m

            memory: 100Mi

          requests:

            cpu: 50m

            memory: 50Mi

        livenessProbe:

          tcpSocket:

            port: 8080

          initialDelaySeconds: 10

          timeoutSeconds: 3

        readinessProbe:

          httpGet:

            path: /ping

            port: 8080

          initialDelaySeconds: 10

          timeoutSeconds: 2

---

apiVersion: v1

kind: Service

metadata:

  name: goapp-svc

  namespace: kube-apps

  labels:

    k8s-app: goappk8s

spec:

  type: NodePort

  ports:

    - name: api

      port: 8080

      targetPort: 8080

      nodePort: 31000

  selector:

    k8s-app: goappk8s

---

apiVersion: extensions/v1beta1

kind: Ingress

metadata:

  name: goapp-ingress

  namespace: kube-apps

spec:

  rules:

  - host: goappk8s.local

    http:

      paths:

      - path: /

        backend:

          serviceName: goapp-svc

          servicePort: api
